--- a/src/app/pages/impact/impact.scss
+++ b/src/app/pages/impact/impact.scss
@@ -47,8 +47,7 @@ $light: #f8f8f8;
 
     a {
         svg {
-            align-self: end;
-            height: 2.5rem;
+            margin-left: 0.4rem;
         }
     }
 
