--- a/src/app/pages/details/resource-box/resource-box.scss
+++ b/src/app/pages/details/resource-box/resource-box.scss
@@ -21,8 +21,8 @@
         cursor: pointer;
 
         video {
-            max-width: 100%;
             pointer-events: none;
+            width: 100%;
         }
     }
 
