Add print partner contact question to adoption form
Issue #1348

--- a/src/app/pages/adoption/adoption.scss
+++ b/src/app/pages/adoption/adoption.scss
@@ -6,4 +6,11 @@
         color: text-color(helper);
         font-style: italic;
     }
+
+    [type="checkbox"] {
+        height: 2rem;
+        margin-right: 0.5rem;
+        transform: translateY(0.3rem);
+        width: 2rem;
+    }
 }
