--- a/src/styles/components/buttons.scss
+++ b/src/styles/components/buttons.scss
@@ -1,44 +1,23 @@
 @import 'pattern-library/core/pattern-library/headers';
 
-[role="button"],
+[role="button"] {
+    cursor: pointer;
+    touch-action: manipulation;
+}
+
 button,
 .btn {
-    border: 0;
-    cursor: pointer;
-    display: inline-block;
+    @include button();
     touch-action: manipulation;
 
-    &:focus {
-        border-radius: 0.3rem;
-        box-shadow: 0 0 0.5rem 0.3rem rgba(os-color(light-blue), 0.7);
+    &.default {
+        background-color: ui-color(white);
     }
 
     &:hover,
     &:focus {
         text-decoration: none;
     }
-}
-
-button,
-.btn {
-    background-color: ui-color(secondary);
-    color: ui-color(white);
-    font-size: inherit;
-    font-weight: 500;
-    padding: 1rem;
-    text-align: center;
-    transition: all 0.2s ease-in-out;
-
-    &.default {
-        background-color: ui-color(white);
-        border: thin solid ui-color(form-border);
-        border-radius: 0.2rem;
-        color: text-color(normal);
-    }
-}
-
-.btn-large {
-    padding: 2.5rem;
 }
 
 // Call-to-action buttons generally have this style
@@ -49,17 +28,7 @@ button,
 
 .cta > .btn,
 .btn-orange {
-    background-color: ui-color(primary);
-    border: 0;
-    color: ui-color(white);
-
-    &:active {
-        background-color: ui-color(primary-active);
-    }
-
-    &:hover {
-        background-color: ui-color(primary-hover);
-    }
+    @include button-type-specific(primary);
 }
 
 .btn-cyan {
