Microdonation messaging banner and popup
Issue #1355

--- a/src/app/components/shell/header/main-menu/main-menu.scss
+++ b/src/app/components/shell/header/main-menu/main-menu.scss
@@ -137,7 +137,8 @@
         height: 2.8rem;
 
         a {
-            height:100%;
+            display: block;
+            height: 100%;
 
             &:active,
             &:focus,
