--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -193,6 +193,7 @@ $button-size: 1.6rem;
         border-radius: none;
         box-shadow: none;
         cursor: pointer;
+        height: 50%;
         order: 2;
         padding: 0;
         position: absolute;
