Code review fixes

--- a/src/app/pages/press/bookings/bookings.scss
+++ b/src/app/pages/press/bookings/bookings.scss
@@ -14,7 +14,7 @@
         grid-template-columns: auto 1fr;
 
         .card {
-            @extend %card;
+            @include card();
 
             height: 10rem;
             overflow: hidden;
