Code review fixes and a truckload of lint
New JSX lint restrictions

--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -5,7 +5,7 @@
             <div class="mission">
                 It's our mission to give every student the tools they need to
                 be successful in the classroom. Help our cause by
-                <a href="/give" target="_blank">donating</a> today.
+                <a href="/give" target="_blank" rel="noreferrer">donating</a> today.
             </div>
             <div class="column col1">
                 <h3>Help</h3>
