--- a/src/app/components/shell/header/upper-menu/upper-menu.html
+++ b/src/app/components/shell/header/upper-menu/upper-menu.html
@@ -3,7 +3,7 @@
     <a class="nav-menu" href="/impact">Our Impact</a>
     <a class="nav-menu" href="/foundation">Supporters</a>
     <a if="model.showBlog" class="nav-menu" href="/blog">Blog</a>
-    <a class="nav-menu" href="/give" target="_blank">Give</a>
+    <a class="nav-menu" href="/give" target="_blank" rel="noreferrer">Give</a>
     <a class="nav-menu" href="https://openstax.secure.force.com/help">Help</a>
     <a class="logo rice-logo logo-wrapper" href="http://www.rice.edu">
         <img src="/images/rice.png" alt="Rice University logo" height="30">
