Code review fixes

--- a/src/app/pages/global-reach/statistics/stat.scss
+++ b/src/app/pages/global-reach/statistics/stat.scss
@@ -23,7 +23,7 @@
         ::-webkit-scrollbar { display: none; }
 
         .col1 {
-            border-radius: 0.3rem; // background: linear-gradient(224.64deg, rgba(250,188,77,0) 0%, #FABC4D 100%), linear-gradient(0deg, #F4D019 0%, #F4D019 100%);
+            border-radius: 0.3rem;
             box-shadow: 0 1.5rem 4rem 0 rgba(0, 0, 0, 0.2);
             height: 36rem;
             width: 26rem;
