--- a/src/app/pages/details/phone-view/phone-view.scss
+++ b/src/app/pages/details/phone-view/phone-view.scss
@@ -25,7 +25,8 @@
         }
 
         .get-the-book,
-        .accordion-item {
+        .accordion-item,
+        .give-link {
             background-color: ui-color(white);
             box-shadow: 0 0.2rem 0.6rem 0 rgba(0, 0, 0, 0.25);
             max-width: 100%;
@@ -35,6 +36,27 @@
                 overflow-x: auto;
                 padding-top: $normal-margin;
             }
+        }
+    }
+
+    .give-link {
+        // Copied from accordion-button
+        align-items: center;
+        background-color: ui-color(white);
+        border-radius: 0.2rem;
+        display: flex;
+        height: 5rem;
+        justify-content: space-between;
+        padding: 0 2rem;
+        // Special behavior to group it with accordions
+        transform: translateY(-2rem);
+
+        a {
+            text-decoration: none;
+        }
+
+        svg {
+            color: os-color(red);
         }
     }
 
