UX fixes for adoption form and recommended callout

--- a/src/app/components/get-this-title/recommended-callout/recommended-callout.scss
+++ b/src/app/components/get-this-title/recommended-callout/recommended-callout.scss
@@ -58,6 +58,7 @@ $extra-dark-mask: rgba(0, 0, 0, 0.4);
             color: unset;
             height: unset;
             justify-content: center;
+            position: static;
             width: 4rem;
 
             &:hover {
