--- a/src/app/components/multi-page-form/multi-page-form.scss
+++ b/src/app/components/multi-page-form/multi-page-form.scss
@@ -3,7 +3,7 @@
 .multi-page-form {
     display: grid;
     grid-gap: 4rem;
-    grid-template-columns: minmax(47rem, auto);
+    grid-template-columns: minmax(auto, 47rem);
     justify-content: center;
     margin-top: 4rem;
 
