--- a/src/app/pages/details/resource-box/resource-box.scss
+++ b/src/app/pages/details/resource-box/resource-box.scss
@@ -40,7 +40,7 @@
 
     @include wider-than($tablet-max) {
         &:hover {
-            box-shadow: 0 0.8rem 2rem 0 rgba(0, 0, 0, 0.25);
+            background-color: #f5f5f5;
         }
     }
 
@@ -137,6 +137,18 @@
 
     @at-root :not(:hover) .bottom .left {
         color: text-color(helper);
+    }
+
+    .download-button {
+        @include button();
+        @include set-font(helper-label);
+
+        background-color: transparent;
+        padding: 0 2rem;
+
+        > :first-child {
+            margin-right: 0.8rem;
+        }
     }
 
     .fa-download {
