Show real book titles in Tech Scount
Issue #1377

--- a/src/app/pages/partners/partner-details/partner-details.html
+++ b/src/app/pages/partners/partner-details/partner-details.html
@@ -13,7 +13,7 @@
             {model.partnerLinkText}<i class="fas fa-external-link-alt"></i>
         </a>
     </section>
-    <div class="scrolling-region">
+    <div class="scrolling-region text-content">
         <section class="carousel" skip="true"></section>
         <section if="model.infoUrl">
             <a class="btn primary" href="{model.infoUrl}">{model.infoText}</a>
