--- a/src/app/components/shell/shared.scss
+++ b/src/app/components/shell/shared.scss
@@ -1,5 +1,6 @@
 @import 'pattern-library/core/pattern-library/headers';
 
+#lower-sticky-note .put-away,
 #microsurvey .put-away {
     @include body-font(1.4rem);
 
