--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -97,6 +97,7 @@ $gradient-sequence: ui-color(white), ui-color(white) 50%, transparent;
                 border-radius: 50%;
                 cursor: pointer;
                 display: flex;
+                font-size: 2.4rem;
                 height: 2.8rem;
                 justify-content: center;
                 width: 2.8rem;
