Fix quote-box button styling on homepage

--- a/src/app/pages/home/quotes/quotes.scss
+++ b/src/app/pages/home/quotes/quotes.scss
@@ -108,6 +108,9 @@
         }
 
         .btn {
+            @include button();
+
+            background-color: transparent;
             font-weight: normal;
             height: 5rem;
         }
