Set microsurvey max width

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -188,7 +188,7 @@ sup {
     border-radius: 0.3rem;
     bottom: $normal-margin;
     box-shadow: 0 0.2rem 0.6rem 0 rgba(ui-color(black), 0.25);
-    max-width: 25%;
+    max-width: 32rem;
     overflow: hidden;
     position: fixed;
     right: $normal-margin;
