Code review fixes

--- a/src/app/pages/details/phone-view/instructor-resources-pane/instructor-resources-pane.scss
+++ b/src/app/pages/details/phone-view/instructor-resources-pane/instructor-resources-pane.scss
@@ -41,7 +41,7 @@
             @include set-font(h4);
         }
 
-        .Login to unlockx {
+        .resource-box {
             width: 20rem;
 
             &.double {
