--- a/src/app/components/book-checkbox/book-checkbox.scss
+++ b/src/app/components/book-checkbox/book-checkbox.scss
@@ -9,12 +9,12 @@
     display: grid;
     grid-gap: $normal-margin;
     grid-template-columns: 1fr auto;
-    height: $form-element-height;
+    min-height: $form-element-height;
     padding-left: $normal-margin;
 
     &.has-image {
         grid-template-columns: $form-element-height 1fr auto;
-        padding-left: 0;
+        padding: 0.3rem;
     }
 
     &.checked {
