Add Give button to main menu
Issue #1421

--- a/src/app/components/shell/header/main-menu/main-menu.scss
+++ b/src/app/components/shell/header/main-menu/main-menu.scss
@@ -73,6 +73,11 @@
             margin: 0;
             overflow: visible;
         }
+
+        .btn {
+            @include button();
+            @extend %primary;
+        }
     }
 
     .nav-menu-item {
