--- a/src/app/pages/details/common/customization-form/customization-form.scss
+++ b/src/app/pages/details/common/customization-form/customization-form.scss
@@ -8,6 +8,12 @@
         margin: 0 0 1rem;
     }
 
+    &:not(.showErrors) {
+        .invalid-message {
+            display: none;
+        }
+    }
+
     .top {
         padding: 3rem;
 
