--- a/src/app/pages/partners/controls/checkboxes-linked-to-store/checkboxes-linked-to-store.scss
+++ b/src/app/pages/partners/controls/checkboxes-linked-to-store/checkboxes-linked-to-store.scss
@@ -2,7 +2,7 @@
 @import 'mixins/placeholder-selectors';
 
 .checkboxes-linked-to-store {
-    padding: 1rem;
+    padding: 1rem 1rem 1rem 1.7rem;
     text-align: left;
 
     .form-control {
