--- a/src/app/pages/partners/active-filters/active-filters.scss
+++ b/src/app/pages/partners/active-filters/active-filters.scss
@@ -11,40 +11,41 @@
         display: flex;
         flex-direction: row;
         justify-content: flex-start;
-        margin-top: 2rem;
+        margin-top: $normal-margin;
 
         &[hidden] {
             display: none;
         }
 
         .filters {
-            @include body-font(1.4rem);
-
             display: flex;
             flex-flow: row wrap;
             margin-bottom: -1rem;
             margin-right: -1rem;
 
-            $baby-blue: rgb(230, 242, 247);
-            $border-blue: rgb(19, 127, 179);
             .filter-remover {
-                background-color: $baby-blue;
-                border: thin solid $border-blue;
-                border-radius: 0.2rem;
+                align-items: center;
+                display: flex;
+                background-color: ui-color(white);
+                border: thin solid ui-color(form-border);
+                border-radius: 0.3rem;
+                height: 4rem;
                 margin-bottom: 1rem;
                 margin-right: 1rem;
-                padding: 0.5rem 1rem;
+                padding: 0 1rem;
             }
 
             button {
                 appearance: none;
                 background-color: transparent;
                 color: text-color(normal);
+                font-size: 150%;
                 margin-left: 1rem;
                 padding: 0;
             }
 
             & + a {
+                line-height: 4rem;
                 margin-left: $normal-margin;
             }
         }
