Detect missing links in resources

--- a/src/app/pages/details/common/resource-box/resource-box.scss
+++ b/src/app/pages/details/common/resource-box/resource-box.scss
@@ -156,6 +156,10 @@
         .print-link {
             border: 0;
         }
+
+        .left.missing-link {
+            color: os-color(red);
+        }
     }
 
     @at-root :not(:hover) .bottom .left {
